Added Junit testcases | Reformatted code